# aethersafta

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  deny.toml  tarpaulin-report.json
.github/workflows/: ci.yml  release.yml
benches/: audio.rs  compose.rs  convert.rs  encode.rs  latency.rs  output.rs
docs/architecture/: overview.md
docs/decisions/: 001-argb-internal-format.md  002-simd-delegation-to-ranga.md  003-tarang-over-direct-ffi.md
docs/development/: dependency-watch.md  performance.md  roadmap.md
examples/: compose.rs  encode.rs  record.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_color_convert.rs  fuzz_compose.rs  fuzz_frame_validation.rs
scripts/: bench-history.sh  version-bump.sh
src/: lib.rs  main.rs
src/audio/: capture.rs  graph.rs  mixer.rs  mod.rs
src/encode/: mod.rs
src/output/: file.rs  mod.rs  mp4.rs
src/scene/: compositor.rs  gpu_compositor.rs  mod.rs
src/source/: image.rs  mod.rs  synthetic.rs
src/tests/: mod.rs
src/timing/: mod.rs
