[package]
name = "aethersafta-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
aethersafta = { path = "..", default-features = false }
serde_json = "1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_compose"
path = "fuzz_targets/fuzz_compose.rs"
doc = false

[[bin]]
name = "fuzz_frame_validation"
path = "fuzz_targets/fuzz_frame_validation.rs"
doc = false

[[bin]]
name = "fuzz_color_convert"
path = "fuzz_targets/fuzz_color_convert.rs"
doc = false
